fix issues with horizontal scrolling, sidenav, and header stickiness

--- a/css/application.css
+++ b/css/application.css
@@ -310,7 +310,9 @@ template {
 
 body {
   position: relative;
-  transition: .5s ease; }
+  transition: .5s ease;
+  overflow: clip;
+  overflow-y: scroll; }
 
 #mainpage {
   padding: 0;
@@ -412,7 +414,7 @@ span {
   top: 0;
   right: 0;
   padding: 0;
-  z-index: 0; }
+  z-index: 5; }
   @media (min-width: 992px) {
     #sidenav {
       width: 350px; } }
@@ -449,11 +451,11 @@ div.sidenav-list {
     font-size: 1.5em;
     text-align: center; }
 
-.showSideNav {
-  transform: translate(-250px, 0); }
+#mainpage.showSideNav {
+  left: -250px; }
   @media (min-width: 992px) {
-    .showSideNav {
-      transform: translate(-350px, 0); } }
+    #mainpage.showSideNav {
+      left: -350px; } }
 
 .sidenav-header {
   color: white;
@@ -811,7 +813,7 @@ button.searchicon--mobile {
     transition: 0.3s ease; }
 
 #top-sticky {
-  position: fixed;
+  position: sticky;
   top: 0;
   z-index: 2;
   transition: 0.3s ease;
@@ -1067,19 +1069,30 @@ li.slick-active {
       background: white; }
 
 #mainpage {
-  float: left;
-  width: 100vw;
-  position: relative; }
+  left: 0;
+  width: 100%;
+  position: relative;
+  overflow: clip;
+  transition: 0.3s ease;
+  z-index: 10;
+  background: white; }
 
 .wrapper {
   position: relative;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  left: 0;
   transition: 0.3s ease;
-  overflow-x: hidden;
   z-index: 1;
-  background: white; }
+  background: transparent;
+  width: 100%; }
+
+.overflow-container {
+  overflow-x: hidden;
+  padding: 0;
+  margin: 0;
+  width: 100%; }
 
 #client__grid {
   padding: 15px;
@@ -1119,7 +1132,9 @@ li.slick-active {
 
 footer {
   background: #323544;
-  color: white; }
+  color: white;
+  width: 100%;
+  margin: 0; }
   footer * {
     display: block;
     line-height: 1.5; }
