--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -11,6 +11,9 @@ footer {
         text-decoration: underline;
     }
 
+    width: 100%;
+    margin: 0;
+
 }
 
 
