--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -287,7 +287,7 @@ button.searchicon--mobile {
 
 
 #top-sticky {
-    position: fixed;
+    position: sticky;
     top: 0;
     z-index: 2;
     transition: 0.3s ease;
