--- a/scss/layout/_wrapper.scss
+++ b/scss/layout/_wrapper.scss
@@ -3,8 +3,16 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    left: 0;
     transition: 0.3s ease;
-    overflow-x: hidden;
     z-index: 1;
-    background: white;
+    background: transparent;
+    width: 100%;
+}
+
+.overflow-container {
+    overflow-x: hidden;
+    padding: 0;
+    margin: 0;
+    width: 100%;
 }
